Now works on whole organism/superpathway blocks

--- a/src/work-hsa.ipynb
+++ b/src/work-hsa.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hypergraphs import *"
+    "from hypergraphs import *\n",
+    "from kegg import *"
    ]
   },
   {
@@ -17,14 +18,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "carbohydrateMetabolismPathways = [\"00010\",\"00020\",\"00030\",\"00040\",\"00051\",\"00052\",\"00053\",\"00500\",\"00520\",\"00620\",\"00630\",\"00640\",\"00650\",\"00660\",\"00562\"]\n",
-    "outputDirectory = \"/Users/boldi/Desktop/new-hsa-bis\"\n",
-    "dataDirectory = \"../../LaTeX/Data/hsa\""
+    "superpathwayDict = {\n",
+    "    \"Carbohydrate metabolism\":\n",
+    "    [\n",
+    "        (\"00010\", \"Glycolysis / Gluconeogenesis\"),\n",
+    "        (\"00020\", \"Citrate cycle (TCA cycle)\"),\n",
+    "        (\"00030\", \"Pentose phosphate pathway\"),\n",
+    "        (\"00040\", \"Pentose and glucuronate interconversions\"),\n",
+    "        (\"00051\", \"Fructose and mannose metabolism\"),\n",
+    "        (\"00052\", \"Galactose metabolism\"),\n",
+    "        (\"00053\", \"Ascorbate and aldarate metabolism\"),\n",
+    "        (\"00500\", \"Starch and sucrose metabolism\"),\n",
+    "        (\"00520\", \"Amino sugar and nucleotide sugar metabolism\"),\n",
+    "        (\"00620\", \"Pyruvate metabolism\"),\n",
+    "        (\"00630\", \"Glyoxylate and dicarboxylate metabolism\"),\n",
+    "        (\"00640\", \"Propanoate metabolism\"),\n",
+    "        (\"00650\", \"Butanoate metabolism\"),\n",
+    "        (\"00562\", \"Inositol phosphate metabolism\")\n",
+    "    ]\n",
+    "}\n",
+    "organismDict = {\"hsa\": \"Homo sapiens (human)\"}\n",
+    "outputDirectory = \"/Users/boldi/Desktop/pw/\"\n",
+    "dataDirectory = \"../../LaTeX/Data/KEGG-Pathways/hsa\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "8defe1fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "organism = \"hsa\"\n",
+    "superpathway = \"Carbohydrate metabolism\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cb8e2d96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "safeSuperpathway = makesafe(superpathway)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "2316bcd8",
    "metadata": {},
    "outputs": [
@@ -32,25 +73,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/boldi/.local/share/virtualenvs/HyperFibrations-Niml-_Xp/lib/python3.9/site-packages/hypernetx/classes/hypergraph.py:968: UserWarning: Cannot add edge. Edge already in hypergraph\n",
+      "/Users/boldi/.local/share/virtualenvs/qf-BIT_cIX4/lib/python3.8/site-packages/hypernetx/classes/hypergraph.py:968: UserWarning: Cannot add edge. Edge already in hypergraph\n",
       "  warnings.warn(\"Cannot add edge. Edge already in hypergraph\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ignoring file ../../LaTeX/Data/hsa/hsa00660-sbml.xml, couldn't get a model out of it\n"
      ]
     }
    ],
    "source": [
-    "H, sr2r, r2ss, rid2rname, mid2mname = read_hg_from_SBML([\"{}/hsa{}-sbml.xml\".format(dataDirectory, x) for x in carbohydrateMetabolismPathways])"
+    "H, sr2r, r2ss, rid2rname, mid2mname = read_hg_from_SBML([os.path.join(f\"{dataDirectory}\", f\"{organism}{x[0]}-sbml.xml\") for x in superpathwayDict[superpathway]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "fc2550ef",
    "metadata": {},
    "outputs": [],
@@ -60,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "80406061",
    "metadata": {},
    "outputs": [
@@ -134,7 +168,7 @@
        " {'rnR01104', 'rnR01329'}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "084e8336",
    "metadata": {},
    "outputs": [
@@ -224,7 +258,7 @@
        " {('C00116', 'C00116'), ('C00159', 'C00159')}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "3857f162",
    "metadata": {},
    "outputs": [
@@ -245,7 +279,7 @@
        "{1: 132, 2: 31, 3: 6, 5: 1, 4: 1, 6: 1, 25: 1}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "46431abf",
    "metadata": {},
    "outputs": [
@@ -266,7 +300,7 @@
        "{1: 126, 2: 15, 3: 1, 10: 1, 4: 1, 14: 1, 26: 1}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,76 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "47f08124",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "def writeKEGGHtml(m, dirname, basename, title, onlyNonTrivial = True, keyadj = None, \n",
-    "                  prefOnly = \"\", cutPref=\"\", addHtmlPrefix=\"https://www.kegg.jp/entry/\", maxPerRow = 3):\n",
-    "    \"\"\"\n",
-    "    \"\"\"\n",
-    "    pageCounter = 0\n",
-    "    npages = len(set(m.values()))\n",
-    "    for v in set(m.values()):\n",
-    "        if keyadj is not None:\n",
-    "            eqClass = set([keyadj[k] for k,w in m.items() if w==v and k.startswith(prefOnly)])\n",
-    "        else:\n",
-    "            eqClass = set([k for k,w in m.items() if w==v and k.startswith(prefOnly)])\n",
-    "        if onlyNonTrivial and len(eqClass) <= 1:\n",
-    "            continue\n",
-    "        out = set([\"{}\".format(k) for k in eqClass])\n",
-    "        outn = len(out)\n",
-    "        rows = math.ceil(outn/maxPerRow)\n",
-    "        fileName = \"{}-cont-{}.html\".format(basename, pageCounter)\n",
-    "        prevName = \"{}-cont-{}.html\".format(basename, pageCounter - 1)\n",
-    "        nextName = \"{}-cont-{}.html\".format(basename, pageCounter + 1)\n",
-    "        headerName = \"{}-header-{}.html\".format(basename, pageCounter)\n",
-    "        footerName = \"{}-footer-{}.html\".format(basename, pageCounter)\n",
-    "        pageCounter += 1\n",
-    "        with open(\"{}/{}\".format(dirname, fileName), \"w\") as file:\n",
-    "            file.write(\"<!DOCTYPE html>\\n<html>\\n\\t<frameset rows=\\\"10%,\" +\n",
-    "                \",\".join([\"*\"] * rows) +\n",
-    "                \",10%\\\">\\n\")\n",
-    "            file.write(\"\\n\\t\\t<frame src=\\\"\" + headerName + \"\\\">\\n\")\n",
-    "            for i,element in enumerate(out):\n",
-    "                if i % maxPerRow == 0:\n",
-    "                    file.write(\"\\t\\t<frameset cols=\\\"\" +\n",
-    "                        \",\".join([\"*\"] * maxPerRow) +\n",
-    "                        \"\\\">\\n\")\n",
-    "                file.write(\"\\t\\t\\t<frame src=\\\"{}{}\\\">\\n\".format(addHtmlPrefix, element[len(cutPref):]))\n",
-    "                if (i + 1) % maxPerRow == 0 or i == outn - 1:\n",
-    "                    file.write(\"\\t\\t</frameset>\\n\")\n",
-    "            file.write(\"\\n\\t\\t<frame src=\\\"\" + footerName + \"\\\">\\n\")\n",
-    "            file.write(\"\\n\\t</frameset>\\n</html>\")\n",
-    "        with open(\"{}/{}\".format(dirname, headerName), \"w\") as file:\n",
-    "            file.write(\"<!DOCTYPE html>\\n<html>\\n\\t<h1>{}{}</h1>\\n</html>\".format(title, pageCounter))\n",
-    "        with open(\"{}/{}\".format(dirname, footerName), \"w\") as file:\n",
-    "            if pageCounter == 1:\n",
-    "                file.write(\"<!DOCTYPE html>\\n<html>\\n\" +\n",
-    "                       \"\\t<table border=\\\"1\\\" style=\\\"margin-left: auto; margin-right: auto;\\\">\\n\" +\n",
-    "                       \"\\t\\t<td style=\\\"padding: 10px;\\\"><a href=\\\"\" + nextName + \"\\\" target=\\\"_top\\\">Next</a></td>\\n\" +\n",
-    "                       \"\\t</table>\\n\" +\n",
-    "                       \"</html>\")\n",
-    "            elif pageCounter == npages:\n",
-    "                file.write(\"<!DOCTYPE html>\\n<html>\\n\" +\n",
-    "                       \"\\t<table border=\\\"1\\\" style=\\\"margin-left: auto; margin-right: auto;\\\">\\n\" +\n",
-    "                       \"\\t\\t<td style=\\\"padding: 10px;\\\"><a href=\\\"\" + prevName + \"\\\" target=\\\"_top\\\">Previous</a></td>\\n\" +\n",
-    "                       \"\\t</table>\\n\" +\n",
-    "                       \"</html>\")\n",
-    "            else:\n",
-    "                file.write(\"<!DOCTYPE html>\\n<html>\\n\" +\n",
-    "                       \"\\t<table border=\\\"1\\\" style=\\\"margin-left: auto; margin-right: auto;\\\">\\n\" +\n",
-    "                       \"\\t\\t<td style=\\\"padding: 10px;\\\"><a href=\\\"\" + prevName + \"\\\" target=\\\"_top\\\">Previous</a></td>\\n\" +\n",
-    "                       \"\\t\\t<td style=\\\"padding: 10px;\\\"><a href=\\\"\" + nextName + \"\\\" target=\\\"_top\\\">Next</a></td>\\n\" +\n",
-    "                       \"\\t</table>\\n\" +\n",
-    "                       \"</html>\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "dc97297a",
    "metadata": {},
    "outputs": [],
@@ -356,168 +321,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e1870435",
    "metadata": {},
    "outputs": [],
    "source": [
-    "writeKEGGHtml(dd, outputDirectory, \"carboR\", \"Homo Sapiens, Carbohydrate metabolism, Reactions group \", onlyNonTrivial=True, prefOnly=\"r\", cutPref=\"rn\")\n",
-    "index += [(\"carboR-cont-0.html\", \"Reaction groups\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "25edc873",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "writeKEGGHtml(dd, outputDirectory, \"carboC\", \"Homo Sapiens, Carbohydrate metabolism, Compound group \", onlyNonTrivial=True, prefOnly=\"C\", cutPref=\"\")\n",
-    "index += [(\"carboC-cont-0.html\", \"Compound groups\")]"
+    "writeKEGGHtml(dd, os.path.join(outputDirectory, organism, safeSuperpathway), safeSuperpathway + \"R\", \n",
+    "              f\"{organismDict[organism]}, {superpathway}, Reactions group\",\n",
+    "              onlyNonTrivial=True, prefOnly=\"r\", cutPref=\"rn\")\n",
+    "index = [(f\"{safeSuperpathway}R-cont-0.html\", \"Reaction groups\")]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "98c4d6c5",
+   "id": "25edc873",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Bio import SeqIO\n",
-    "from Bio.KEGG.REST import *\n",
-    "from Bio.KEGG.KGML import KGML_parser\n",
-    "from Bio.Graphics.KGML_vis import KGMLCanvas\n",
-    "from Bio.Graphics.ColorSpiral import ColorSpiral\n",
-    "\n",
-    "from IPython.display import Image, HTML\n",
-    "import numpy as np\n",
-    "import matplotlib"
+    "writeKEGGHtml(dd, os.path.join(outputDirectory, organism, safeSuperpathway), safeSuperpathway + \"C\", \n",
+    "              f\"{organismDict[organism]}, {superpathway}, Compound group\",\n",
+    "              onlyNonTrivial=True, prefOnly=\"C\", cutPref=\"\")\n",
+    "index += [(f\"{safeSuperpathway}C-cont-0.html\", \"Compound groups\")]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7d41955d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pathwaynames = {}\n",
-    "with open(\"../../LaTeX/Data/hsa/hsa-dict.csv\") as file:\n",
-    "    for row in csv.reader(file):\n",
-    "        pathwaynames[row[0]] = row[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "id": "b50d8ccc",
    "metadata": {},
    "outputs": [],
    "source": [
     "groupedReactions = mapKeys(dd, prefOnly=\"rn\")\n",
     "r2gr = {}\n",
+    "r2grall = {}\n",
     "for i, reactions in enumerate(groupedReactions):\n",
     "    for reaction in reactions:\n",
-    "        r2gr[reaction] = i"
+    "        r2gr[reaction] = i\n",
+    "        r2grall[reaction] = reactions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "f1f72bcf",
    "metadata": {},
    "outputs": [],
    "source": [
     "groupedCompounds = mapKeys(dd, prefOnly=\"C\")\n",
     "c2gc = {}\n",
+    "c2gcall = {}\n",
     "for i, compounds in enumerate(groupedCompounds):\n",
     "    for compound in compounds:\n",
-    "        c2gc[compound] = i + len(groupedReactions)"
+    "        c2gc[compound] = i + len(groupedReactions)\n",
+    "        c2gcall[compound] = compounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9b3f3357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index += writeKEGGpdf(outputDirectory, organism, superpathway, superpathwayDict, r2gr, r2grall, c2gc, c2gcall)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0b2cb6fb",
+   "id": "a1bbf009",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ncols = len(groupedReactions) + len(groupedCompounds) + 1 \n",
-    "rgbCols = plt.cm.get_cmap(\"viridis\", ncols).colors\n",
-    "cols = [matplotlib.colors.rgb2hex(c) for c in rgbCols]"
+    "writeIndex(os.path.join(outputDirectory, organism, safeSuperpathway), index, \n",
+    "           f\"{organismDict[organism]}, {superpathway}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "227e7fa2",
+   "id": "ff1d485b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pathway 00660 could not be downloaded: ignoring\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for pw in carbohydrateMetabolismPathways:\n",
-    "    try:\n",
-    "        pathway = KGML_parser.read(kegg_get(\"hsa\" + pw, \"kgml\"))\n",
-    "    except:\n",
-    "        print(\"Pathway\", pw, \"could not be downloaded: ignoring\")\n",
-    "        continue\n",
-    "    canvas = KGMLCanvas(pathway)\n",
-    "    for k in pathway.entries:\n",
-    "        t = pathway.entries[k].type\n",
-    "        pathway.entries[k].graphics[0].bgcolor = \"#FFFFFF\"\n",
-    "        if t == \"gene\" or t == \"ortholog\":\n",
-    "            reaction = \"rn\" + pathway.entries[k].reaction[3:]\n",
-    "            if reaction in r2gr:\n",
-    "                pathway.entries[k].graphics[0].bgcolor = cols[r2gr[reaction]]\n",
-    "                pathway.entries[k].graphics[0].name = \"[R{}] {}\".format(r2gr[reaction], pathway.entries[k].graphics[0].name)\n",
-    "        elif t == \"compound\":\n",
-    "            compound = pathway.entries[k].name[4:]\n",
-    "            if compound in c2gc:\n",
-    "                pathway.entries[k].graphics[0].bgcolor = cols[c2gc[compound]]\n",
-    "                pathway.entries[k].graphics[0].name = \"[C{}] {}\".format(c2gc[compound], pathway.entries[k].graphics[0].name)\n",
-    "    canvas.import_imagemap = True\n",
-    "    pathwayName = \"hsa\" + str(pw)\n",
-    "    pdfName = pathwayName + \".pdf\"\n",
-    "    canvas.draw(\"{}/{}\".format(outputDirectory, pdfName))\n",
-    "    index += [(pdfName, pathwaynames[pathwayName])]\n"
+    "with open(os.path.join(outputDirectory, organism, safeSuperpathway, \"data.pkl\"), \"wb\") as file:\n",
+    "    pickle.dump([dd, sr2r, r2ss, rid2rname, mid2mname], file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a1bbf009",
+   "id": "ddcb8bf8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"{}/index.html\".format(outputDirectory), \"w\") as file:\n",
-    "    file.write(\"<!DOCTYPE html>\\n<html>\\n\")\n",
-    "    file.write(\"\\t<h1>Homo Sapiens, Carbohydrate metabolism</h1>\\n\")\n",
-    "    file.write(\"\\t<ul>\\n\")\n",
-    "    for link, anchor in index:\n",
-    "        file.write(\"\\t\\t<li><a href=\\\"{}\\\">{}</a>\\n\".format(link, anchor))\n",
-    "    file.write(\"\\t</ul>\\n\")\n",
-    "    file.write(\"</html>\\n\")"
+    "writeIndex(os.path.join(outputDirectory, organism), \n",
+    "           [(\"{}/index.html\".format(makesafe(k)), k) for k in superpathwayDict.keys()],\n",
+    "           f\"{organismDict[organism]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8fcb987c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writeIndex(os.path.join(outputDirectory), \n",
+    "          [(f\"{k}/index.html\", v) for k,v in organismDict.items()],\n",
+    "           \"Pathways\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e4291bd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(outputDirectory, organism, safeSuperpathway, \"data.pkl\"), \"rb\") as file:\n",
+    "    dd, sr2r, r2ss, rid2rname, mid2mname = pickle.load(file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fcb987c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "848ab309",
+   "id": "4ba1d444",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -539,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
