--- a/src/work-NafisNothobranchiusFurzieri.ipynb
+++ b/src/work-NafisNothobranchiusFurzieri.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "848ab309",
    "metadata": {},
    "outputs": [],
@@ -176,10 +176,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "8fcb987c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'e' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 9\u001b[0m\n\u001b[1;32m      8\u001b[0m dd, sr2r, r2ss, rid2rname, mid2mname \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[0;32m----> 9\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mnafis\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdd\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m table\u001b[38;5;241m.\u001b[39mloc[superpathway]\u001b[38;5;241m.\u001b[39mloc[organismName] \u001b[38;5;241m=\u001b[39m x\n",
+      "File \u001b[0;32m~/svn/Lavori/HyperFibrations/qf/src/kegg.py:139\u001b[0m, in \u001b[0;36mnafis\u001b[0;34m(d)\u001b[0m\n\u001b[1;32m    138\u001b[0m classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(d\u001b[38;5;241m.\u001b[39mvalues()))\n\u001b[0;32m--> 139\u001b[0m afiber \u001b[38;5;241m=\u001b[39m n \u001b[38;5;241m/\u001b[39m \u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mclasses\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m afiber \u001b[38;5;241m/\u001b[39m (n \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m/\u001b[39m (n \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m             avg \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m x\n\u001b[1;32m     12\u001b[0m             n \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m---> 13\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[43me\u001b[49m:\n\u001b[1;32m     14\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m     15\u001b[0m table\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAVERAGE\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mloc[organismName] \u001b[38;5;241m=\u001b[39m avg \u001b[38;5;241m/\u001b[39m n\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'e' is not defined"
+     ]
+    }
+   ],
    "source": [
     "for organism, organismName in organismDict.items():\n",
     "    avg = 0\n",
@@ -200,172 +217,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3643e51f",
+   "execution_count": null,
+   "id": "1ba22d51",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mus musculus (house mouse)</th>\n",
-       "      <th>Danio rerio (zebrafish)</th>\n",
-       "      <th>Nothobranchius furzeri (turquoise killifish)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Carbohydrate metabolism</th>\n",
-       "      <td>0.002031</td>\n",
-       "      <td>0.001990</td>\n",
-       "      <td>0.001990</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Energy metabolism</th>\n",
-       "      <td>0.048980</td>\n",
-       "      <td>0.048980</td>\n",
-       "      <td>0.048980</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Lipid metabolism</th>\n",
-       "      <td>0.001505</td>\n",
-       "      <td>0.001614</td>\n",
-       "      <td>0.001594</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Nucleotide metabolism</th>\n",
-       "      <td>0.003579</td>\n",
-       "      <td>0.003516</td>\n",
-       "      <td>0.003516</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Amino acid metabolism</th>\n",
-       "      <td>0.002628</td>\n",
-       "      <td>0.002713</td>\n",
-       "      <td>0.002713</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Metabolism of other amino acids</th>\n",
-       "      <td>0.008578</td>\n",
-       "      <td>0.009128</td>\n",
-       "      <td>0.009128</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Glycan biosynthesis and metabolism</th>\n",
-       "      <td>0.003590</td>\n",
-       "      <td>0.004041</td>\n",
-       "      <td>0.004024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Metabolism of cofactors and vitamins</th>\n",
-       "      <td>0.005138</td>\n",
-       "      <td>0.005138</td>\n",
-       "      <td>0.005273</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Metabolism of terpenoids and polyketides</th>\n",
-       "      <td>0.023173</td>\n",
-       "      <td>0.023173</td>\n",
-       "      <td>0.023173</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Biosynthesis of other secondary metabolites</th>\n",
-       "      <td>0.093664</td>\n",
-       "      <td>0.259615</td>\n",
-       "      <td>0.259615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Xenobiotics biodegradation and metabolism</th>\n",
-       "      <td>0.012697</td>\n",
-       "      <td>0.015935</td>\n",
-       "      <td>0.015935</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AVERAGE</th>\n",
-       "      <td>0.018688</td>\n",
-       "      <td>0.034168</td>\n",
-       "      <td>0.034176</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             Mus musculus (house mouse)  \\\n",
-       "Carbohydrate metabolism                                        0.002031   \n",
-       "Energy metabolism                                              0.048980   \n",
-       "Lipid metabolism                                               0.001505   \n",
-       "Nucleotide metabolism                                          0.003579   \n",
-       "Amino acid metabolism                                          0.002628   \n",
-       "Metabolism of other amino acids                                0.008578   \n",
-       "Glycan biosynthesis and metabolism                             0.003590   \n",
-       "Metabolism of cofactors and vitamins                           0.005138   \n",
-       "Metabolism of terpenoids and polyketides                       0.023173   \n",
-       "Biosynthesis of other secondary metabolites                    0.093664   \n",
-       "Xenobiotics biodegradation and metabolism                      0.012697   \n",
-       "AVERAGE                                                        0.018688   \n",
-       "\n",
-       "                                             Danio rerio (zebrafish)  \\\n",
-       "Carbohydrate metabolism                                     0.001990   \n",
-       "Energy metabolism                                           0.048980   \n",
-       "Lipid metabolism                                            0.001614   \n",
-       "Nucleotide metabolism                                       0.003516   \n",
-       "Amino acid metabolism                                       0.002713   \n",
-       "Metabolism of other amino acids                             0.009128   \n",
-       "Glycan biosynthesis and metabolism                          0.004041   \n",
-       "Metabolism of cofactors and vitamins                        0.005138   \n",
-       "Metabolism of terpenoids and polyketides                    0.023173   \n",
-       "Biosynthesis of other secondary metabolites                 0.259615   \n",
-       "Xenobiotics biodegradation and metabolism                   0.015935   \n",
-       "AVERAGE                                                     0.034168   \n",
-       "\n",
-       "                                             Nothobranchius furzeri (turquoise killifish)  \n",
-       "Carbohydrate metabolism                                                          0.001990  \n",
-       "Energy metabolism                                                                0.048980  \n",
-       "Lipid metabolism                                                                 0.001594  \n",
-       "Nucleotide metabolism                                                            0.003516  \n",
-       "Amino acid metabolism                                                            0.002713  \n",
-       "Metabolism of other amino acids                                                  0.009128  \n",
-       "Glycan biosynthesis and metabolism                                               0.004024  \n",
-       "Metabolism of cofactors and vitamins                                             0.005273  \n",
-       "Metabolism of terpenoids and polyketides                                         0.023173  \n",
-       "Biosynthesis of other secondary metabolites                                      0.259615  \n",
-       "Xenobiotics biodegradation and metabolism                                        0.015935  \n",
-       "AVERAGE                                                                          0.034176  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "table"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3960150c",
+   "cell_type": "raw",
+   "id": "ee49e2d8",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be9a7192",
+   "metadata": {},
    "source": []
   }
  ],
